--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
   <div class="col-auto pointer h-100 d-flex align-items-center pr-0 unselectable" routerLink="/home" (click)="redirectToHome()">
     <img src="./../../assets/logo/logo_transparent.png" alt="NBU Logistics Logo">
   </div>
-  <div *ngIf="userRole == 'USER' || userRole == 'ADMIN' || userRole == 'COURIER'" class="col name-text font-monsterrat h-100 white-color d-flex justify-content-end align-items-center pl-0">
+  <div *ngIf="fullName" class="col name-text font-monsterrat h-100 white-color d-flex justify-content-end align-items-center pl-0">
     Hello, {{ fullName }}
   </div>
   <div *ngIf="userRole == 'USER' || userRole == 'ADMIN' || userRole == 'COURIER'" class="col-auto h-100 d-flex justify-content-end align-items-center pl-0">
